--- a/Squish/Squish.csproj
+++ b/Squish/Squish.csproj
@@ -50,16 +50,21 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\AssetManager.cs" />
     <Compile Include="src\Asset.cs" />
-    <Compile Include="src\StateController.cs" />
+    <Compile Include="src\Controller.cs" />
     <Compile Include="src\extensions\SFMLExtensions.cs" />
     <Compile Include="src\extensions\CSharpExtensions.cs" />
     <Compile Include="src\QuadBatch.cs" />
     <Compile Include="src\Game.cs" />
+    <Compile Include="src\valuetypes\SortMode.cs" />
+    <Compile Include="src\_interfaces\IComponentOf.cs" />
     <Compile Include="src\_interfaces\IUpdateable.cs" />
     <Compile Include="src\_interfaces\ITimer.cs" />
     <Compile Include="src\MathHelper.cs" />
-    <Compile Include="src\_structs\Delta3.cs" />
-    <Compile Include="src\_structs\Delta2.cs" />
+    <Compile Include="src\valuetypes\Delta3.cs" />
+    <Compile Include="src\valuetypes\Delta2.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="todo.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
