--- a/Squish/Squish.csproj
+++ b/Squish/Squish.csproj
@@ -50,13 +50,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\AssetManager.cs" />
     <Compile Include="src\Asset.cs" />
-    <Compile Include="src\Controller.cs" />
-    <Compile Include="src\extensions\SFMLExtensions.cs" />
+    <Compile Include="src\GameComponentBase.cs" />
+    <Compile Include="src\Curve.cs" />
+    <Compile Include="src\SpriteSheet.cs" />
     <Compile Include="src\extensions\CSharpExtensions.cs" />
     <Compile Include="src\QuadBatch.cs" />
-    <Compile Include="src\Game.cs" />
-    <Compile Include="src\valuetypes\SortMode.cs" />
-    <Compile Include="src\_interfaces\IComponentOf.cs" />
+    <Compile Include="src\GameBase.cs" />
+    <Compile Include="src\_interfaces\IGameComponent.cs" />
+    <Compile Include="src\_interfaces\INode.cs" />
     <Compile Include="src\_interfaces\IUpdateable.cs" />
     <Compile Include="src\_interfaces\ITimer.cs" />
     <Compile Include="src\MathHelper.cs" />
