--- a/AutumnWillow/AutumnWillow.csproj
+++ b/AutumnWillow/AutumnWillow.csproj
@@ -34,10 +34,11 @@
   <ItemGroup>
     <None Include="app.config" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\controllers\GameControllerBase.cs" />
+    <Compile Include="src\controllers\InputController.cs" />
     <Compile Include="src\controllers\StatusController.cs" />
+    <Compile Include="src\MapInformation.cs" />
+    <Compile Include="src\EntityType.cs" />
     <Compile Include="src\GameContent.cs" />
-    <Compile Include="src\GameControllers.cs" />
     <Compile Include="src\GameState.cs" />
     <Compile Include="src\gameplay\Actor.cs" />
     <Compile Include="src\controllers\MapController.cs" />
@@ -175,7 +176,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="res\data\frames.dat" />
+    <None Include="res\data\frames.dat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="doc\mnemonics.txt" />
